docs/0.18/_sources/modeling/gallery/temporal/plot_expdecay_temporal.rst.txt
.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_temporal_plot_expdecay_temporal.py>`     to download the full example code
    .. rst-class:: sphx-glr-example-title

    .. _sphx_glr_modeling_gallery_temporal_plot_expdecay_temporal.py:


.. _expdecay-temporal-model:

ExpDecay Temporal Model
=======================

This model parametrises an ExpDecay time model.

.. math::
                F(t) = exp(t - t_{ref})/t0

Example plot
------------
Here is an example plot of the model:


.. code-block:: default


    from astropy import units as u
    from astropy.time import Time
    import matplotlib.pyplot as plt







YAML representation
-------------------
Here is an example YAML file using the model:


.. code-block:: default

    from gammapy.modeling.models import (
        ExpDecayTemporalModel,
        Models,
        PowerLawSpectralModel,
        SkyModel,
    )

    t0 = "5 h"
    t_ref = Time("2020-10-01")
    time_range = [t_ref, t_ref + 1 * u.d]
    expdecay_model = ExpDecayTemporalModel(t_ref=t_ref.mjd * u.d, t0=t0)
    expdecay_model.plot(time_range)
    plt.grid(which="both")



    model = SkyModel(
        spectral_model=PowerLawSpectralModel(),
        temporal_model=expdecay_model,
        name="expdecay_model",
    )
    models = Models([model])

    print(models.to_yaml())



.. image:: /modeling/gallery/temporal/images/sphx_glr_plot_expdecay_temporal_001.png
    :alt: plot expdecay temporal
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /Users/adonath/software/anaconda3/envs/gammapy-dev/lib/python3.7/site-packages/astropy/units/quantity.py:477: RuntimeWarning: overflow encountered in exp
      result = super().__array_ufunc__(function, method, *arrays, **kwargs)
    /Users/adonath/software/anaconda3/envs/gammapy-dev/lib/python3.7/site-packages/astropy/units/quantity.py:477: RuntimeWarning: invalid value encountered in subtract
      result = super().__array_ufunc__(function, method, *arrays, **kwargs)
    components:
    -   name: expdecay_model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
        temporal:
            type: ExpDecayTemporalModel
            parameters:
            -   name: t0
                value: 0.20833333333333331
                unit: d
            -   name: t_ref
                value: 59123.0
                unit: d
                frozen: true






.. _sphx_glr_download_modeling_gallery_temporal_plot_expdecay_temporal.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_expdecay_temporal.py <plot_expdecay_temporal.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_expdecay_temporal.ipynb <plot_expdecay_temporal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
