docs/0.19/_sources/modeling/gallery/temporal/plot_expdecay_temporal.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "modeling/gallery/temporal/plot_expdecay_temporal.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_modeling_gallery_temporal_plot_expdecay_temporal.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_modeling_gallery_temporal_plot_expdecay_temporal.py:


.. _expdecay-temporal-model:

ExpDecay temporal model
=======================

This model parametrises an ExpDecay time model.

.. math::
                F(t) = exp(t - t_{ref})/t0

.. GENERATED FROM PYTHON SOURCE LINES 16-19

Example plot
------------
Here is an example plot of the model:

.. GENERATED FROM PYTHON SOURCE LINES 19-37

.. code-block:: default


    from astropy import units as u
    from astropy.time import Time
    import matplotlib.pyplot as plt
    from gammapy.modeling.models import (
        ExpDecayTemporalModel,
        Models,
        PowerLawSpectralModel,
        SkyModel,
    )

    t0 = "5 h"
    t_ref = Time("2020-10-01")
    time_range = [t_ref, t_ref + 1 * u.d]
    expdecay_model = ExpDecayTemporalModel(t_ref=t_ref.mjd * u.d, t0=t0)
    expdecay_model.plot(time_range)
    plt.grid(which="both")




.. image-sg:: /modeling/gallery/temporal/images/sphx_glr_plot_expdecay_temporal_001.png
   :alt: plot expdecay temporal
   :srcset: /modeling/gallery/temporal/images/sphx_glr_plot_expdecay_temporal_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 38-41

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 41-50

.. code-block:: default


    model = SkyModel(
        spectral_model=PowerLawSpectralModel(),
        temporal_model=expdecay_model,
        name="expdecay_model",
    )
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    /Users/adonath/software/mambaforge/envs/gammapy-dev/lib/python3.9/site-packages/astropy/units/quantity.py:486: RuntimeWarning: overflow encountered in exp
      result = super().__array_ufunc__(function, method, *arrays, **kwargs)
    /Users/adonath/software/mambaforge/envs/gammapy-dev/lib/python3.9/site-packages/astropy/units/quantity.py:486: RuntimeWarning: invalid value encountered in subtract
      result = super().__array_ufunc__(function, method, *arrays, **kwargs)
    components:
    -   name: expdecay_model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
                frozen: true
        temporal:
            type: ExpDecayTemporalModel
            parameters:
            -   name: t0
                value: 5.0
                unit: h
            -   name: t_ref
                value: 59123.0
                unit: d
                frozen: true






.. _sphx_glr_download_modeling_gallery_temporal_plot_expdecay_temporal.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: plot_expdecay_temporal.py <plot_expdecay_temporal.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: plot_expdecay_temporal.ipynb <plot_expdecay_temporal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
